Web app introduction
Confirmar funcionalidad de la api

--- a/ITZRealStateWeb/Views/Shared/_Layout.cshtml
+++ b/ITZRealStateWeb/Views/Shared/_Layout.cshtml
@@ -21,6 +21,7 @@
                     </section>
                     <nav>
                         <ul id="menu">
+                            <li>@Html.ActionLink("TEST", "Index", "Amenitie")</li>
                             <li>@Html.ActionLink("Inicio", "Index", "Home")</li>
                             <li>@Html.ActionLink("Acerca de", "About", "Home")</li>
                             <li>@Html.ActionLink("Contacto", "Contact", "Home")</li>
