Integrate Home Page 80%

--- a/ITZRealStateWeb/Views/Amenitie/Index.cshtml
+++ b/ITZRealStateWeb/Views/Amenitie/Index.cshtml
@@ -1,8 +1,7 @@
-﻿@model IEnumerable<ITZRealStateWeb.Models.AmenitieModel>
+﻿@model IEnumerable<ITZRealStateWeb.Models.Amenitie>
 
 @{
     ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>Index</h2>
