--- a/ITZRealStateWeb/Views/Home/About.cshtml
+++ b/ITZRealStateWeb/Views/Home/About.cshtml
@@ -6,7 +6,8 @@
     <h1>@ViewBag.Title.</h1>
     <h2>@ViewBag.Message</h2>
 </hgroup>
-
+<link rel="stylesheet" type="text/css" href="/content/Main/MainSite.css" />
+  
 <article>
     <p>
         Use esta área para proporcionar información adicional.
