--- a/ITZRealStateWeb/Views/Home/Index.cshtml
+++ b/ITZRealStateWeb/Views/Home/Index.cshtml
@@ -1,45 +1,123 @@
-﻿@{
-    ViewBag.Title = "Página principal";
-}
-@section featured {
-    <section class="featured">
-        <div class="content-wrapper">
-            <hgroup class="title">
-                <h1>@ViewBag.Title.</h1>
-                <h2>@ViewBag.Message</h2>
-            </hgroup>
-            <p>
-                Para obtener más información sobre ASP.NET MVC, visite
-                <a href="http://asp.net/mvc" title="Sitio web de ASP.NET MVC">http://asp.net/mvc</a>.
-                La página incluye <mark>vídeos, cursos y ejemplos</mark> para ayudarle a sacar el máximo partido a ASP.NET MVC.
-                Si tiene alguna pregunta relacionada con ASP.NET MVC, visite
-                <a href="http://forums.asp.net/1146.aspx/1?MVC" title="Foro de ASP.NET MVC">nuestros foros</a>.
-            </p>
+﻿<header>
+    @Styles.Render("~/Content/css")
+    <nav>
+        <div id="juer" class="sidebar2">
+            <div id="sear_settings" class="form_settings">
+                <p>
+                    <h4>SEARCH YOUR HOME</h4>
+                </p>
+                <form action="#" method="post">
+                    <input id="id" class="form_settings" type="text" name="name" value="city or zipcode" />
+                    <select class="select" id="id" name="name">
+                        <option value="1">all types</option>
+                        <option value="2">single familily</option>
+                        <option value="3">multi familily</option>
+                        <option value="4">rentable</option>
+                    </select>
+                    <p>
+                        <input id="id" class="form_settings" type="text" name="name" value="distance" />
+                    </p>
+                    <p>
+                        <input id="id" class="form_settings" type="text" name="name" value="$min price" />
+                    </p>
+                    <p id="id2">To</p>
+                    <p>
+                        <input id="id" type="text" name="name" value="$max Price" />
+                    </p>
+                </form>
+                <div id="id3">
+                    <p>
+                        <button type="button" name="" value="" class="button">Search</button>
+                    </p>
+                    <p>
+                        <button type="button" name="" value="" class="button">Save Search</button>
+                    </p>
+                </div>
+            </div>
         </div>
-    </section>
-}
-<h3>Le sugerimos lo siguiente:</h3>
-<ol class="round">
-    <li class="one">
-        <h5>Introducción</h5>
-        ASP.NET MVC ofrece una manera eficaz basada en patrones de crear sitios web dinámicos que
-        permite llevar a cabo una clara separación de aspectos y proporciona control sobre el marcado
-        para un desarrollo más ágil y atractivo. ASP.NET MVC incluye numerosas características que ofrecen
-        un entorno rápido y compatible con TDD para crear aplicaciones sofisticadas que utilicen
-        los estándares web más recientes.
-        <a href="http://go.microsoft.com/fwlink/?LinkId=245151">Más información…</a>
-    </li>
+    </nav>
 
-    <li class="two">
-        <h5>Agregar paquetes NuGet y poner en marcha su codificación</h5>
-        NuGet facilita la instalación y actualización de herramientas y bibliotecas gratuitas.
-        <a href="http://go.microsoft.com/fwlink/?LinkId=245153">Más información…</a>
-    </li>
 
-    <li class="three">
-        <h5>Buscar hospedaje web</h5>
-        Encuentre fácilmente empresas de alojamiento web que ofrezcan la mejor relación de características
-        y precio para sus aplicaciones.
-        <a href="http://go.microsoft.com/fwlink/?LinkId=245157">Más información…</a>
-    </li>
-</ol>
+
+    <!-- Formulario de SignIn -->
+    <div id="signInF" class="sidebar">
+        <h2>User Sing In</h2>
+        <div class="form_settings">
+            <h1>
+                <p><span>nick name</span><input type="text" name="name" value="" /></p>
+            </h1>
+            <h1>
+                <p><span>write your password</span><input type="password" name="password"></p>
+            </h1>
+            <h1>
+                <p><span>repit your password</span><input type="password" name="psw1" value="password" /></p>
+            </h1>
+            <h1>
+                <p><span>write your E-mail</span><input type="text" name="psw1" value="E-mail" /></p>
+            </h1>
+        </div>
+        <p>Take a look around and let us know what you think.</p>
+    </div>
+
+
+
+    <!-- Formulario de LogIn -->
+    <div id="logInF" class="sidebar">
+        <h2>Log In</h2>
+        <ul>
+
+            <div class="form_settings">
+                <h1>
+                    <p><span>nick name</span><input type="text" name="name" value="" /></p>
+                </h1>
+                <h1>
+                    <p><span>write your password</span><input type="password" name="password"></p>
+                </h1>
+            </div>
+        </ul>
+        <p>
+            <button type="button" name="Sing in" value="sing it" class="button">Log In</button>
+        </p>
+        <h1>
+            <p>arent you  registed yet!?</p>
+        </h1>
+        <p>
+            <button type="button" name="Sing in" value="sing it" class="button">Sing up in ITZrealstate for more features</button>
+        </p>
+        <p>
+            <p>
+                <button type="button" name="" value="" class="button">Or Sing up with facebook</button>
+            </p>
+        </p>
+        <p>what are you waiting for!?</p>
+    </div>
+</header>
+
+
+
+
+
+<div id="site_content">
+    <div id="sidebar_container">
+    </div>
+    <div class="content">
+        <h1>cuerpo del index</h1>
+        <p>no se q poner aqui >m</p>
+    </div>
+</div>
+<footer>
+    <p>
+        Copyright ITZ REALSTATE by deneb systems
+</footer>
+
+
+<p>&nbsp;</p>
+<!-- javascript at the bottom for fast page loading -->
+<script type="text/javascript" src="Scripts/Shared/jquery.js"></script>
+<script type="text/javascript" src="Scripts/Shared/jquery.easing-sooper.js"></script>
+<script type="text/javascript" src="Scripts/Shared/jquery.sooperfish.js"></script>
+<script type="text/javascript">
+    $(document).ready(function () {
+        $('ul.sf-menu').sooperfish();
+    });
+</script>
