--- a/ITZRealStateWeb/Views/Account/Register.cshtml
+++ b/ITZRealStateWeb/Views/Account/Register.cshtml
@@ -1,6 +1,7 @@
 ﻿@model ITZRealStateWeb.Models.RegisterModel
 @{
     ViewBag.Title = "Registrarse";
+    Layout = "~/Views/Shared/_LayoutAccount.cshtml";
 }
 
 <hgroup class="title">
