--- a/ITZRealStateWeb/Views/Account/Login.cshtml
+++ b/ITZRealStateWeb/Views/Account/Login.cshtml
@@ -1,13 +1,15 @@
 ﻿@model ITZRealStateWeb.Models.LoginModel
 
 @{
-    ViewBag.Title = "Iniciar sesión";
+    ViewBag.Title = "Login";
+    Layout = "~/Views/Shared/_LayoutAccount.cshtml";
 }
 
 <hgroup class="title">
     <h1>@ViewBag.Title.</h1>
 </hgroup>
 
+ 
 <section id="loginForm">
 <h2>Utilice una cuenta local para iniciar sesión.</h2>
 @using (Html.BeginForm(new { ReturnUrl = ViewBag.ReturnUrl })) {
@@ -48,3 +50,4 @@
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
+
