--- a/ITZRealStateWeb/Views/Shared/_Layout.cshtml
+++ b/ITZRealStateWeb/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
 
     <div id="menu_container">
         <ul class="sf-menu edgeLoad-EDGE-1562389" id="nav">
-            <li id="txt" class="edgeLoad-EDGE-1562389"><a href="Account/Login" class="edgeLoad-EDGE-1562389" ">Log In</a></li>
+            <li id="txt" class="edgeLoad-EDGE-1562389"><a href="/Dashboard" class="edgeLoad-EDGE-1562389" ">Log In</a></li>
         </ul>
     </div>
 
