--- a/ITZRealStateWeb/Views/Dashboard/Index.cshtml
+++ b/ITZRealStateWeb/Views/Dashboard/Index.cshtml
@@ -5,9 +5,9 @@
 <nav>
     <div id="menu_container" class="left">
         <ul class="sf-menu" id="nav">
-            <li><a href="examples.html">Sale Agents</a></li>
             <li><a href="#">Listings</a></li>
-            <li><a href="page.html">favorites</a></li>
+            <li><a href="#">Sale Agents</a></li>
+            <li><a href="#">favorites</a></li>
         </ul>
     </div>
 </nav>
