--- a/ITZRealStateWeb/Views/Account/Login.cshtml
+++ b/ITZRealStateWeb/Views/Account/Login.cshtml
@@ -4,20 +4,26 @@
     ViewBag.Title = "Login";
     Layout = "~/Views/Shared/_LayoutAccount.cshtml";
 }
+<head>
+  <title>itzrealstate</title>
+  <meta name="description" content="website description" />
+  <meta name="keywords" content="website keywords, website keywords" />
+  <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+  <link rel="stylesheet" type="text/css" href="Content/logs.css" />
+  <!-- modernizr enables HTML5 elements and feature detects -->
+  <script type="text/javascript" src="js/modernizr-1.5.min.js"></script>
+</head>
 
 <hgroup class="title">
     <h1>@ViewBag.Title.</h1>
 </hgroup>
 
- 
 <section id="loginForm">
-<h2>Utilice una cuenta local para iniciar sesión.</h2>
 @using (Html.BeginForm(new { ReturnUrl = ViewBag.ReturnUrl })) {
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
-
-    <fieldset>
-        <legend>Formulario de inicio de sesión</legend>
+   <div class="center">
+     <div class="sidebar">
         <ol>
             <li>
                 @Html.LabelFor(m => m.UserName)
@@ -34,19 +40,18 @@
                 @Html.LabelFor(m => m.RememberMe, new { @class = "checkbox" })
             </li>
         </ol>
-        <input type="submit" value="Iniciar sesión" />
-    </fieldset>
+        <input type="submit" value="Iniciar sesión" class= "button"/>
+        </div>
     <p>
-        @Html.ActionLink("Register", "Register") si no tiene ninguna cuenta.
+        @Html.ActionLink("Register", "Register")
     </p>
+   </div>
 }
 </section>
-
 <section class="social" id="socialLoginForm">
     <h2>Usar otro servicio para iniciar sesión.</h2>
     @Html.Action("ExternalLoginsList", new { ReturnUrl = ViewBag.ReturnUrl })
 </section>
-
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
