--- a/ITZRealStateWeb/Views/Home/Index.cshtml
+++ b/ITZRealStateWeb/Views/Home/Index.cshtml
@@ -1,4 +1,8 @@
-﻿<div>
+﻿@{
+    ViewBag.Title = "Index";
+    Layout = "~/Views/Shared/_LayoutHome.cshtml";
+}
+<div>
     <nav>
         <div id="juer" class="sidebar2">
             <div id="sear_settings" class="form_settings">
