--- a/ITZRealStateWeb/Views/Dashboard/Index.cshtml
+++ b/ITZRealStateWeb/Views/Dashboard/Index.cshtml
@@ -1,31 +1,4 @@
 ﻿@{
     ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_LayoutDashboard.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<nav>
-    <div id="menu_container" class="left">
-        <ul class="sf-menu" id="nav">
-            <li><a href="#">Listings</a></li>
-            <li><a href="#">Sale Agents</a></li>
-            <li><a href="#">favorites</a></li>
-        </ul>
-    </div>
-</nav>
-
-<div id="site_content">
-</div>
-
-<footer>
-    <p>Copyright 2013 ITZ realstate</p>
-</footer>
-
-<p>&nbsp;</p>
-<!-- javascript at the bottom for fast page loading -->
-<script type="text/javascript" src="js/jquery.js"></script>
-<script type="text/javascript" src="js/jquery.easing-sooper.js"></script>
-<script type="text/javascript" src="js/jquery.sooperfish.js"></script>
-<script type="text/javascript">
-    $(document).ready(function () {
-        $('ul.sf-menu').sooperfish();
-    });
-</script>
