--- a/ITZRealStateWeb/Views/Shared/_Layout.cshtml
+++ b/ITZRealStateWeb/Views/Shared/_Layout.cshtml
@@ -1,43 +1,61 @@
-﻿<!DOCTYPE html>
-<html lang="es">
+﻿<!DOCTYPE HTML>
+<html>
 <head>
-    <title>ITZRealState</title>
-    <meta name="casas en venta" content="casas en venta al mejor precio" />
-    <meta name="keywords" content="casas en venta ITZREALSTATE" />
+    <title>ITZRealState - Dashboard </title>
+    <meta name="description" content="welcome to the dashboard" />
+    <meta name="keywords" content="website keywords, website keywords" />
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-    @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
-    @Scripts.Render("~/bundles/jqueryval")
+    @Styles.Render("~/Content/Dash")
     <!-- modernizr enables HTML5 elements and feature detects -->
-
-    <script type='text/javascript' src='https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js'></script>
     <script type="text/javascript" src="Scripts/Shared/modernizr-1.5.min.js"></script>
     <script type="text/javascript" src="Scripts/Shared/script.js"></script>
-
-    <div id="menu_container">
-        <ul class="sf-menu edgeLoad-EDGE-1562389" id="nav">
-            <li id="txt" class="edgeLoad-EDGE-1562389"><a href="/Dashboard" class="edgeLoad-EDGE-1562389" ">Log In</a></li>
-        </ul>
-    </div>
-
 </head>
 
-<body>
+<body id="main">
     <div id="main">
         <header>
             <div id="logo">
+                <span class="left">
+                    <a href="/home/">
+                        <img src="Images/Dashboard/logoITZ.png" alt="example graphic" /></a></span>
                 <div id="logo_text">
+                    <div id="menu_container2">
+                        <ul class="sf-menu edgeLoad-EDGE-1562389" id="nav">
+                            <span class="left">
+                                <img src="images/dashboard/perfil.jpg" alt="example graphic" id="imagePorfile" /></span>
+                            <li id="txt" class="edgeLoad-EDGE-1562389"><a id="login" href="#" class="edgeLoad-EDGE-1562389">Hi! My Name</a>
+                                <ul>
+                                    <li><a href="#" onclick="EditUserjs();">Account</a></li>
+                                    <li>
+                                        <span class="logout-btn">
+                                            @using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm" }))
+                                            {
+                                                @Html.AntiForgeryToken()
+                                                <a href="javascript:document.getElementById('logoutForm').submit()" class="btn-on">Log off</a>
+                                            }
+                                        </span>
+                                    </li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
                     <!-- class="logo_colour", allows you to change the colour of the text -->
-
-                    <h1><a href="index.html">ITZ<span class="color del ogo?">RealState</span></a></h1>
-                    <h4>
-                        <pre>WHERE EVER YOU ARE...FIND YOU PLACE</pre>
-                    </h4>
-
                 </div>
             </div>
         </header>
     </div>
+    <nav>
+        <div id="menu_container" class= "left">
+            <ul class="sf-menu" id="nav">
+            <li><a href="examples.html">Sale Agents</a></li>
+            <li><a href="#">Listings</a></li>
+			<li><a href="page.html">favorites</a></li>  		
+          </ul>
+        </div>
+      </nav>
+    <div id="site_content">
+    </div>
+
     <div id="body">
         @RenderSection("featured", required: false)
         <section class="content-wrapper main-content clear-fix">
@@ -46,7 +64,3 @@
     </div>
 </body>
 </html>
-
-@section Scripts {
-    
-}
