User Edit & DB modif.

--- a/ITZRealStateWeb/Views/Shared/_LayoutHome.cshtml
+++ b/ITZRealStateWeb/Views/Shared/_LayoutHome.cshtml
@@ -16,7 +16,7 @@
 
     <div id="menu_container">
         <ul class="sf-menu edgeLoad-EDGE-1562389" id="nav">
-            <li id="txt" class="edgeLoad-EDGE-1562389"><a href="/Dashboard" class="edgeLoad-EDGE-1562389" ">Log In</a></li>
+            <li class="last"><a href="@Url.Action("Index","Dashboard")">Login</a></li>
         </ul>
     </div>
 
