--- a/ITZRealStateWeb/Views/Shared/_Layout.cshtml
+++ b/ITZRealStateWeb/Views/Shared/_Layout.cshtml
@@ -5,10 +5,9 @@
     <meta name="description" content="welcome to the dashboard" />
     <meta name="keywords" content="website keywords, website keywords" />
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-    @Styles.Render("~/Content/Dash")
-    <!-- modernizr enables HTML5 elements and feature detects -->
     <script type="text/javascript" src="Scripts/Shared/modernizr-1.5.min.js"></script>
-    <script type="text/javascript" src="Scripts/Shared/script.js"></script>
+    @Styles.Render("~/Content/Dash")
+    <!-- modernizr enables HTML5 elements and feature detects -->  
 </head>
 
 <body id="main">
@@ -17,12 +16,12 @@
             <div id="logo">
                 <span class="left">
                     <a href="/home/">
-                        <img src="Images/Dashboard/logoITZ.png" alt="example graphic" /></a></span>
+                        <img src="~/Images/Dashboard/logoITZ.png" alt="example graphic" /></a></span>
                 <div id="logo_text">
                     <div id="menu_container2">
                         <ul class="sf-menu edgeLoad-EDGE-1562389" id="nav">
                             <span class="left">
-                                <img src="images/dashboard/perfil.jpg" alt="example graphic" id="imagePorfile" /></span>
+                                <img src="~/images/dashboard/perfil.jpg" alt="example graphic" id="imagePorfile" /></span>
                             <li id="txt" class="edgeLoad-EDGE-1562389"><a id="login" href="#" class="edgeLoad-EDGE-1562389">Hi! My Name</a>
                                 <ul>
                                     <li><a href="#" onclick="EditUserjs();">Account</a></li>
@@ -62,5 +61,8 @@
             @RenderBody()
         </section>
     </div>
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/Scripts/Shared/_layout.js")
 </body>
 </html>
