--- a/ITZRealStateWeb/Views/User/Edit.cshtml
+++ b/ITZRealStateWeb/Views/User/Edit.cshtml
@@ -1,18 +1,11 @@
 ﻿@model ITZRealStateWeb.Models.User
-
-@using (Html.BeginForm("EditUserAjax", "User", FormMethod.Post, new { @class = "metro-form", id = "current_form" })) {
+<div>
+@using (Html.BeginForm("EditUserAjax", "User", FormMethod.Post, new { @class = "metro-form", id = "current_form" })) 
+{
     @Html.ValidationSummary(true)
 
     <fieldset>
         <legend>User</legend>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.IdUser)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.IdUser)
-            @Html.ValidationMessageFor(model => model.IdUser)
-        </div>
 
         <div class="editor-label">
             @Html.LabelFor(model => model.firstName)
@@ -31,14 +24,6 @@
         </div>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.facebookId)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.facebookId)
-            @Html.ValidationMessageFor(model => model.facebookId)
-        </div>
-
-        <div class="editor-label">
             @Html.LabelFor(model => model.zipCode)
         </div>
         <div class="editor-field">
@@ -54,19 +39,16 @@
             @Html.ValidationMessageFor(model => model.email)
         </div>
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.accesstoken)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.accesstoken)
-            @Html.ValidationMessageFor(model => model.accesstoken)
-        </div>
-
         <p>
-            <input type="submit" value="Save" />
+            <input value="Update" class="button" type="button" onclick="submitEdit(this.form);" />
+            <input class="button" type="button" value="Cancel" onclick="CancelEditU();" />
         </p>
+        @Html.HiddenFor(model => model.IdUser)
+        @Html.HiddenFor(model => model.facebookId)
+        @Html.HiddenFor(model => model.accesstoken)
     </fieldset>
 }
+    </div>
 
 <script type="text/javascript">
 	$(document).ready(function () {
