--- a/ITZRealStateWeb/Content/logs.css
+++ b/ITZRealStateWeb/Content/logs.css
@@ -1,350 +1,72 @@
-signInF, #logInF{
-  display: none;
-}
+#centro{
+
+padding: 50px 0 0 450px;
 
 
-@font-face { 
-  font-family: kalinga; 
-    src: url('../fonts/kalinga-webfont.eot'); 
-    src: local("kalinga"), url('../fonts/-webfont.ttf'); 
-} 
-
-@font-face { 
-  font-family: kalinga; 
-    src: url('../fonts/kalinga-Regular.eot'); 
-    src: local("kalinga"), url('../fonts/kalinga-Regular.ttf'); 
-} 
-
-html { 
-  height: 100%;
-}
-
-* { 
-  margin: 0;
-  padding: 0;
-}
-
-/* tell the browser to render HTML 5 elements as block */
-article, aside, figure, footer, header, hgroup, nav, section { 
-  display:block;
-  }
-
-body { 
-  font: normal .80em arial, sans-serif;
-   background:#F9F4F2;
-  *background-color: rgba(123, 33, 13, .6);
-  color: ##B3AAAF;
-  
-  
-} 
-
-p { 
-  padding: 0 0 20px 0;
-  line-height: 1.7em;
-}
-
-img { 
-  border: 0;
-}
-
-h1, h2, h3, h4, h5, h6 { 
-  color: #FFF;
-  letter-spacing: 0em;
-  padding: 0 0 5px 0;
-}
-
-h1, h2, h3 { 
-  font: normal 140% arial, sans-serif;
-  margin: 0 0 15px 0;
-  padding: 15px 0 5px 0;
-  color: #FFF;
-}
-
-h2 { 
-  font-size: 160%;
-  padding: 9px 0 5px 0;
-  color: #E2E03E;
-}
-
-h3 { 
-  font-size: 140%;
-  padding: 20px 0 0 0;
-}
-
-h4, h6 { 
-  color: #E2E03E;
-  padding: 0 0 5px 0;
-  font: normal 250% 'Jenna Sue', arial, sans-serif;
-}
-
-h5, h6 { 
-  font: italic 95% arial, sans-serif;
-  letter-spacing: normal;
-  padding: 0 0 15px 0;
-}
-
-h5 { 
-  color: #FFF;
-}
-
-a, a:hover { 
-  outline: none;
-  text-decoration: underline;
-  color: #CF2605;
-}
-
-a:hover { 
-  text-decoration: none;
-}
-
-blockquote { 
-  margin: 20px 0; 
-  padding: 10px 20px 0 20px;
-  border: 1px solid #987562;
-  background: #425ad4;
-}
-
-ul { 
-  margin: 2px 0 2px 7px;
-}
-
-ul li { 
-  list-style-type: circle;
-  margin: 0 0 2px 0; 
-  padding: 0 0 2px 2px;
-  line-height: 1.5em;
-}
-
-ol { 
-  margin: 2px 0 2px 2px;
-}
-
-ol li { 
-  margin: 0 0 11px 0;
-}
-
-.left { 
-  float: left;
-  width: auto;
-  margin-right: 10px;
-}
-
-.right { 
-  float: right; 
-  width: auto;
-  margin-left: 10px;
-}
-
-.center { 
-  display: block;
-  text-align: center;
-  margin: 20px auto;
-}
-
-#main, nav, #container, #logo, #site_content, #id  footer { 
-  margin-left: auto; 
-  margin-right: auto;
-}
-
-#main {
-  margin: 50px auto;
-  width: 1340px;
-  border-radius: 0px 0px 0px 0px;
-  -moz-border-radius: 3px 3px 3px 3px;
-  -webkit-border: 1px 1px 3px 3px;
-  background-color:#B3AAAF;
-  padding-bottom: 100px;
-}
-
-header { 
-  background: transparent; 
- height: 300px;
 
 }
 
-#logo { 
-  width: 1340px;
-  height: 100px;
-  background: transparent;
-  color: #888;
-  padding: 0;
+#esp{
+
+padding: 0 10 100 0px;
+
+
+
 }
 
-#logo h1, #logo h2 { 
-  font: normal 320% 'News Cycle', arial, sans-serif;
-  border-bottom: 0;
-  text-transform: none;
-  margin: 0;
+#login-box {
+	width:373px;
+	height: 492px;
+	padding: 10px 76px 0 76px;
+	color: #E2E03E;
+	font: 16px kalinga, Helvetica, sans-serif;
+
+font-variant-position:normal;
+
 }
 
-#logo_text h1, #logo_text h1 a, #logo_text h1 a:hover { 
-  padding: 20px 0 0 0;
-  color: #FFF;
-  text-decoration: none;
+#login-box2 {
+
+	padding: 20px 6px 0 6px;
+	color: #E2E03E;
+	font: 16px kalinga, Helvetica, sans-serif;
+
+font-variant-position:normal;
+color:white;
 }
 
-#logo_text h1 a .logo_colour { 
-  color: #CF2605;
-}
-
-#logo_text a:hover .logo_colour { 
-  color: #FFF;
-}
-
-#logo_text h2 { 
-  font: 170% 'News Cycle', arial, sans-serif;
-  padding: 0 0 0 0;
-}
-
-nav { 
-  height: 44px;
-  width:  1340px;
-  margin: auto auto auto auto;
-  background: #c77c6b; /* Show a solid color for older browsers */
-  border: 0px solid #483F2C;
-  -webkit-border-radius: 0px 0px 0px 0px;
-  border-radius: 0px 0px 0px 0px;
-} 
-
-#menu_container { 
-  width: 1000px;
-  margin: auto auto auto auto;
-}
-
-#site_content { 
-  width: 1000px;
-  overflow: hidden;
-  margin: 0px auto 0 auto;
-  padding: 15px 0 15px 0;
-} 
-
-#sidebar_container { 
-  float: right;
-  width: 224px;
-  padding: 0px 0 0 0;
+#login-box h2 {
+	padding:0;
+	margin:0;
+	color:  lightgoldenrodyellow;
+	font: 1700% 16px kalinga, Helvetica, sans-serif;
 }
 
 
-.sidebar { 
-  float: right;
-  width: 350px;
-  margin: 0 0 17px 0;
-  background: #5c3e32;
-  border: 2px solid #4e3329;
-  -webkit-border-radius: 0px 0px 0px 0px; 
-  -moz-border-radius: 0px 0px 0px 0px;
-  border-radius: 0px 0px 0px 0px;
-  padding: 0 15px 5px 13px;
-  opacity: 0.8;
-  visible: 
+#login-box-name {
+	float: left;
+	display:inline;
+	width:80px;
+	text-align: right;
+	padding: 2px 1px 0 0;
+	margin: 2px 0 19px 0;
+	
+	  width: auto;
+	  margin-top:3px;
 }
 
-.sidebar h2, .content h1 { 
-  padding: 5px 5px 5px 0;
-  font: 200% 'kalinga', helvetica, sans-serif;
-  text-shadow:  #000 1px 1px;
-  margin: 0 1px;
-  color: #FFF;
-  
+#login-box-field {
+	float: left;
+	display:inline;
+	width:23px;
+	margin:0;
+	margin:10px 10px 7px 0;
+	margin-top:20px;
 }
 
-.sidebar h3 { 
-  padding: 9px 15px 14px 0;
-  color: #FFF;
-  font: 50% 'kalinga', helvetica, sans-serif;
-}
 
-.sidebar ul { 
-  margin: 0 0 15px 0;
-} 
-
-.sidebar li a, .sidebar li a:hover { 
-  color: #ca9184;
-  text-decoration: none;
-} 
-
-.sidebar li a:hover { 
-  text-decoration: underline;
-} 
-
-.sidebar_item, .content_item { 
-  padding: 15px 0;
-}
-
-.paperclip { 
-  float: left;
-  position: relative; 
-  z-index: 0;
-  vertical-align: middle; 
-  margin: -15px 0 -60px -40px;
-}
-
-.content { 
-  text-align: left;
-  width: 630px;
-  margin: 0 0 15px 0;
-  float: left;
-  font-size: 120%;
-  padding: 14px 0 0 0;
-}
-  
-.content ul { 
-  margin: 2px 0 22px 0px;
-}
-
-.content ul li, .sidebar ul li { 
-  list-style-type: none;
-  background: url(../images/bullet.png) no-repeat;
-  margin: 0 0 0 0; 
-  padding: 0 0 4px 28px;
-  line-height: 1.5em;
-}
-
-footer { 
-  width: auto;
-  font: 130% 'kalinga', arial, sans-serif;
-  height: auto;
-  padding: 5px 0 20px 0;
-  text-align: center; 
-  background: #5c3e32; /* Show a solid color for older browsers */
-  border: 1px solid #483F2C;
-  border-radius: 0px 0px 0px 0px;
-  -moz-border-radius: 0px 7px 7px 7px;
-  -webkit-border: 7px 7px 7px 7px;
-}
-
-footer p { 
-  line-height: 1.7em;
-  padding: 0 0 10px 0;
-}
-
-footer a { 
-  color: #FFF;
-  text-decoration: none;
-}
-
-footer a:hover { 
-  color: #AAA;
-  text-shadow: none;
-  text-decoration: underline;
-}
-
-.form_settings { 
-  margin: 15px 0 0 0;
-}
-
-.form_settings p { 
-  padding: 0 0 4px 0;
-}
-
-.form_settings span { 
-  float: left; 
-  width: 200px; 
-  text-align: left;
-}
-  
-.form_settings input, .form_settings textarea { 
-  padding: 5px; 
+.form-login  {
+padding: 3px; 
   width: 299px; 
   font: 80% kalinga; 
   border: 1px solid #966558; 
@@ -354,8 +76,84 @@ footer a:hover {
   -moz-border-radius: 7px 7px 7px 7px;
   -webkit-border: 7px 7px 7px 7px;  
 }
+
+
+.login-box-options  {
+	clear:both;
+	padding-left:7px;
+	font-size: 21px;
+	margin-left:5px;
+	
+
+}
+
+.login-box-options a {
+	color: #ebebeb;
+	font-size: 21px;
+}
+
+
+
+
+
+
+
+
+
+.btn {
+	font-family: Helvetica, sans-serif;
+	font-size: 14px;
+	  text-align:center;
+	color: #ffffff;
+	padding: 6px 10px;
+	background: -moz-linear-gradient(
+		top,
+		#ffffff 0%,
+		#5c2a1e 91%,
+		#57221e 0%,
+		#db8133);
+	background: -webkit-gradient(
+		linear, left top, left bottom, 
+		from(#ffffff),
+		color-stop(0.91, #5c2a1e),
+		color-stop(0.0, #57221e),
+		to(#db8133));
+	-moz-border-radius: 14px;
+	-webkit-border-radius: 14px;
+	border-radius: 14px;
+	border: 0px solid #332516;
+	float: left;
+	
+	
+}
+.btn:hover {
+  padding-bottom: 6px;
+  padding-left: 10px;
+  padding-right: 13px;
+  padding-top: 8px;
+    cursor:pointer;
+}
+
+
+.formus { 
+  margin: 15px 0 0 0;
+}
+
+.formus p { 
+  padding: 0 0 4px 0;
+}
+
+.formus span { 
+  float: left; 
+  width: 200px; 
+  text-align: left;
+}
   
-.form_settings .submit { 
+.formus input, .form_settings textarea { 
+  
+}
+  
+.formus .submit { 
   font: 200% 'Jenna Sue', arial, sans-serif; 
   border: 0; 
   width: 99px; 
@@ -374,16 +172,16 @@ footer a:hover {
   color: #FFF;
 }
 
-.form_settings textarea, .form_settings select { 
+.formus textarea, .form_settings select { 
   font: 100% arial; 
   width: 299px;
 }
 
-.form_settings select { 
+.formus select { 
   width: 310px;
 }
 
-.form_settings .checkbox { 
+.formus .checkbox { 
   margin: 4px 0; 
   padding: 0; 
   width: 14px;
@@ -391,264 +189,100 @@ footer a:hover {
   background: none;
 }
 
-.separator { 
-  width: 100%;
-  height: 0;
-  border-top: 1px solid #D9D5CF;
-  border-bottom: 1px solid #FFF;
-  margin: 0 0 20px 0;
-}
-  
-table { 
-  margin: 10px 0 30px 0;
-}
-
-table tr th, table tr td { 
-  background: #CD6132;
-  color: #FFF;
-  padding: 7px 4px;
-  text-align: left;
-}
-  
-table tr td { 
-  background: #F8EEEA;
-  color: #47433F;
-  border-top: 1px solid #FFF;
-}
 
 
 
 
 
-/**
-
- */
-html body ul.sf-menu ul,html body ul.sf-menu ul li { 
-  width: 240px;
-}
-
-html body ul.sf-menu ul ul { 
-  margin: 0 0 0 240px;
-}
 
 
-ul.sf-menu,ul.sf-menu * { 
-  margin: 0;
-  padding: 0;
-}
 
-ul.sf-menu { 
-  display: block;
-  position: relative;
-}
-  
-ul.sf-menu li { 
-  display: block;
-  list-style: none;
-  float: left;
-  position: relative;
-}
-  
-ul.sf-menu li:hover { 
-  visibility: inherit; /* fixes IE7 'sticky bug' */ 
-}
 
-ul.sf-menu a { 
-  display: block;
-  position: relative;
-}
-  
-ul.sf-menu ul { 
-  position: absolute;
-  left: 0;
-  width: 150px; 
-  top: auto;
-  left: -999999px;
-}
-  
-ul.sf-menu ul a { 
-  zoom: 1; /* IE6/7 fix */ 
-}
 
-ul.sf-menu ul li { 
-  float: left; /* Must always be floated otherwise there will be a rogue 1px margin-bottom in IE6/7 */
-  width: 150px;
-}
-  
-ul.sf-menu ul ul { 
-  top: 0;
-  margin: 0 0 0 150px;
-}
 
-ul.sf-menu li:hover ul,ul.sf-menu li:focus ul,ul.sf-menu li.sf-hover ul, 
-ul.sf-menu ul li:hover ul,ul.sf-menu ul li:focus ul,ul.sf-menu ul li.sf-hover ul,
-ul.sf-menu ul ul li:hover ul,ul.sf-menu ul ul li:focus ul,ul.sf-menu ul ul li.sf-hover ul,
-ul.sf-menu ul ul ul li:hover ul,ul.sf-menu ul ul ul li:focus ul,ul.sf-menu ul ul ul li.sf-hover ul { 
-  left: auto;
-}
-  
-ul.sf-menu li:hover ul ul,ul.sf-menu li:focus ul ul,ul.sf-menu li.sf-hover ul ul,
-ul.sf-menu ul li:hover ul ul,ul.sf-menu ul li:focus ul ul,ul.sf-menu ul li.sf-hover ul ul,
-ul.sf-menu ul ul li:hover ul ul,ul.sf-menu ul ul li:focus ul ul,ul.sf-menu ul ul li.sf-hover ul ul,
-ul.sf-menu ul ul ul li:hover ul ul,ul.sf-menu ul ul ul li:focus ul ul,ul.sf-menu ul ul ul li.sf-hover ul ul { 
-  left: -999999px;
-}
 
-/* autoArrows CSS */
-span.sf-arrow { 
-  width: 7px;
-  height: 7px;
-  position: absolute;
-  top: 20px;
-  right: 5px;
-  display: block;
-  background: url(../images/arrows-white.png) no-repeat 0 0;
-  overflow: hidden; /* making sure IE6 doesn't overflow and expand the box */
-  font-size: 1px;
-}
 
-ul ul span.sf-arrow { 
-  right: 10;
-  top: 24px;
-  background-position: 0 100%;
-}
 
-/* Theming the menu */
-ul#nav { 
+
+
+#side_container { 
   float: right;
+  width: 224px;
+padding: 100px 0 0 20px;
 }
 
-ul#nav ul {
-font-family: 'kalinga';
-  background: #483F2C;
-  margin-top: -5px;
-  padding-bottom: 15px;
-}
-
-ul#nav li a { 
-  padding:8px 20px 6px 20px;
-  font: 240% 'kalinga', arial, sans-serif;
-  text-decoration: none;
-  color: #FFF;
-  margin-right: 2px;
-}
-
-ul#nav li a:hover, ul#nav li a:focus { 
-  color: #945c44;
-  text-shadow: none;
-}
-
-ul#nav ul li a { 
-  padding: 10px 10px 6px 10px;
-}
-
-ul#nav ul li a:hover, ul#nav ul li a:focus { 
-  color: #945c44;
-  text-shadow: none;
-}
-
-.button {
-	font-family: Helvetica, sans-serif;
-	font-size: 14px;
-	color: #ffffff;
-	padding: 10px 20px;
-	background: -moz-linear-gradient(
-		top,
-		#ffffff 0%,
-		#5c2a1e 91%,
-		#57221e 0%,
-		#db8133);
-	background: -webkit-gradient(
-		linear, left top, left bottom, 
-		from(#ffffff),
-		color-stop(0.91, #5c2a1e),
-		color-stop(0.0, #57221e),
-		to(#db8133));
-	-moz-border-radius: 14px;
-	-webkit-border-radius: 14px;
-	border-radius: 14px;
-	border: 0px solid #332516;
-	-moz-box-shadow:
-		0px 0px 0px rgba(000,000,000,0.5),
-		inset 0px 0px 2px rgba(196,146,85,1);
-	-webkit-box-shadow:
-		0px 0px 0px rgba(000,000,000,0.5),
-		inset 0px 0px 0px rgba(196,146,85,1);
-	box-shadow:
-		0px 1px 3px rgba(000,000,000,0.5),
-		inset 0px 0px 2px rgba(196,146,85,1);
-	text-shadow:
-		0px -0px 0px rgba(000,000,000,0.2),
-		0px 0px 0px rgba(255,255,255,0.4);
-	float: left ;
-}
-.button:hover {
-  padding-bottom: 6px;
-  padding-left: 36px;
-  padding-right: 33px;
-  padding-top: 8px;
-    cursor:pointer;
-}
-
-
-.select {
-    padding:4px;
-    margin: 0;
-    border-radius:4px;
-    -webkit-box-shadow: 
-        0 3px 0 #ccc,
-        0 -1px #fff inset;
-    background: #f8f8f8;
-    color:#888;
-    border:none;
-    outline:none;
-    display: inline-block;
-    -webkit-appearance:none; 
-    cursor:pointer;
-}
-
- 
-    label {position:relative}
-   label:after {
-        content:'<>';
-        font:11px "Consolas", monospace;
-        color:#aaa;
-        -webkit-transform:rotate(90deg);
-        position:absolute;
-        right:4px;
-        top:2px;
-        padding:0 0 2px;
-        pointer-events:none;
-        border-bottom:1px solid #ddd;
-    }
-
-#id {
-height:20px;
-width:100px;
-font-size:16px;
- float:left;
- margin: 3px;
-
-}
-
-#id2 {
-height:20px;
-width:18px;
-font-size:18px;
- float:left;
- margin: 3px;
-}
-
-
-.sidebar2 { 
-  margin: center;
+.side { 
+   float:none;
+  width: 350px;
+  margin: 0 0 10px 0;
   background: #5c3e32;
   border: 2px solid #4e3329;
-  -webkit-border-radius: 20px 20px 20px 20px; 
+  -webkit-border-radius: 0px 0px 0px 0px; 
   -moz-border-radius: 0px 0px 0px 0px;
   border-radius: 0px 0px 0px 0px;
-  padding: 0 15px 5px 13px;
+  padding: 100px 0 0 20px;
   opacity: 0.8;
-   float:none;
-    vertical-align:center;
+  visible: 
 }
+
+.side h3, .content h1 { 
+  padding: 5px 15px 20px 0;
+  font: 200% 'kalinga', helvetica, sans-serif;
+  text-shadow:  #000 1px 1px;
+  margin: 0 1px;
+  color: #FFF;
+  
+}
+
+.side h3 { 
+  padding: 9px 15px 14px 0;
+  color: #FFF;
+  font: 70% 'kalinga', helvetica, sans-serif;
+}
+
+.side ul { 
+  margin: 0 0 15px 0;
+} 
+
+.side li a, .side li a:hover { 
+  color: #ca9184;
+  text-decoration: none;
+} 
+
+.side li a:hover { 
+  text-decoration: underline;
+} 
+
+.side_item, .content_item { 
+  padding: 15px 0;
+}
+
+.paperclip { 
+  float: left;
+  position: relative; 
+  z-index: 0;
+  vertical-align: middle; 
+  margin: -15px 0 -60px -40px;
+}
+
+.content { 
+  text-align: left;
+  width: 0px;
+  margin: 0 0 15px 0;
+  float: left;
+  font-size: small;
+  color:white;
+  padding: 4px 0 0 0;
+}
+  
+.content ul { 
+  margin: 2px 0 2px 0px;
+}
+
+    .content ul li, .sidebar ul li
+    {
+        list-style-type: none;
+        margin: 0 0 0 0;
+        padding: 0 0 4px 8px;
+        line-height: 1.5em;
+    }
