--- a/ITZRealStateWeb/Views/Account/Login.cshtml
+++ b/ITZRealStateWeb/Views/Account/Login.cshtml
@@ -1,58 +1,83 @@
 ﻿@model ITZRealStateWeb.Models.LoginModel
 
-@{
-    ViewBag.Title = "Login";
+
+<H1>@{
+    ViewBag.Title = "Login"; 
     Layout = "~/Views/Shared/_LayoutAccount.cshtml";
-}
+} </H1>
+
 <head>
   <title>itzrealstate</title>
   <meta name="description" content="website description" />
   <meta name="keywords" content="website keywords, website keywords" />
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-  <link rel="stylesheet" type="text/css" href="Content/logs.css" />
+  <link rel="stylesheet" type="text/css" href="~/Content/logs.css" />
   <!-- modernizr enables HTML5 elements and feature detects -->
   <script type="text/javascript" src="js/modernizr-1.5.min.js"></script>
 </head>
 
+
+<div id="centro">
+    <div id="login-box" class="sidebar">
 <hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
+    <h2>@ViewBag.Title.</h2>
 </hgroup>
 
-<section id="loginForm">
+
 @using (Html.BeginForm(new { ReturnUrl = ViewBag.ReturnUrl })) {
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
-   <div class="center">
-     <div class="sidebar">
-        <ol>
-            <li>
-                @Html.LabelFor(m => m.UserName)
+    <div class= "form_login" id= "esp">
+                <div id="login-box-name" class="form_settings">
+                 @Html.LabelFor(m => m.UserName)
                 @Html.TextBoxFor(m => m.UserName)
-                @Html.ValidationMessageFor(m => m.UserName)
-            </li>
-            <li>
+                @Html.ValidationMessageFor(m => m.UserName) 
+
                 @Html.LabelFor(m => m.Password)
                 @Html.PasswordFor(m => m.Password)
                 @Html.ValidationMessageFor(m => m.Password)
-            </li>
-            <li>
-                @Html.CheckBoxFor(m => m.RememberMe)
-                @Html.LabelFor(m => m.RememberMe, new { @class = "checkbox" })
-            </li>
-        </ol>
-        <input type="submit" value="Iniciar sesión" class= "button"/>
+                    </div>
         </div>
-    <p>
-        @Html.ActionLink("Register", "Register")
-    </p>
-   </div>
+                    
+
+     <div class="btn">
+     
+                      @Html.LabelFor(m => m.RememberMe, new { @class = "checkbox" })
+
+    </div>
+    
+
+                <span class="login-box-options">
+                @Html.CheckBoxFor(m => m.RememberMe)
+                                        </span>
+            
+    
+        <input type="submit" value="Iniciar sesión" class= "btn"/>
+       <div class="btn"> @Html.ActionLink("Register", "Register") </div>
+    
 }
-</section>
+       
+        
+
+
+
+
+
+<br>
+<br>
+        <div class="login-box2">
 <section class="social" id="socialLoginForm">
-    <h2>Usar otro servicio para iniciar sesión.</h2>
+    <h1>Usar otro servicio para iniciar sesión.</h1>
     @Html.Action("ExternalLoginsList", new { ReturnUrl = ViewBag.ReturnUrl })
 </section>
+
+    </div>
+</div>
+
+
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
+
+    </div>
 
