--- a/ITZRealStateWeb/Views/Shared/_Layout.cshtml
+++ b/ITZRealStateWeb/Views/Shared/_Layout.cshtml
@@ -52,9 +52,9 @@
     <nav>
         <div id="menu_container" class="left">
             <ul class="sf-menu" id="nav">
-                <li><a href="#">Listings</a></li>
+                <li><a href="#" onclick="Listings();">Listings</a></li>
                 <li><a href="#">Sale Agents</a></li>
-                <li><a href="#" onclick="DesireList();">favorites</a></li>
+                <li><a href="#" onclick="DesireList();">Favorites</a></li>
             </ul>
         </div>
     </nav>
