--- a/ITZRealStateWeb/Content/Main/MainSite.css
+++ b/ITZRealStateWeb/Content/Main/MainSite.css
@@ -56,7 +56,7 @@ h1, h2, h3, h4, h5, h6 {
 
 h1, h2, h3 { 
   font: normal 140% arial, sans-serif;
-  margin: 0 0 15px 0;
+  margin: 0 0 0px 0;
   padding: 15px 0 5px 0;
   color: #FFF;
 }
@@ -91,7 +91,7 @@ h5 {
 a, a:hover { 
   outline: none;
   text-decoration: underline;
-  color: #CF2605;
+  color: #FFFFFF;
 }
 
 a:hover { 
@@ -184,7 +184,7 @@ header {
 }
 
 #logo_text h1 a .logo_colour { 
-  color: #CF2605;
+  color: #FFFFFF;
 }
 
 #logo_text a:hover .logo_colour { 
@@ -236,7 +236,7 @@ nav {
   -moz-border-radius: 0px 0px 0px 0px;
   border-radius: 0px 0px 0px 0px;
   padding: 0 15px 5px 13px;
-  opacity: 0.8;
+
 }
 
 .sidebar h2, .content h1 { 
@@ -344,8 +344,9 @@ footer a:hover {
 }
   
 .form_settings input, .form_settings textarea { 
-  padding: 5px; 
+  padding: 3px; 
   width: 299px; 
+  align-self: stretch;
   font: 80% kalinga; 
   border: 1px solid #966558; 
   background: #FFFFF; 
@@ -612,7 +613,6 @@ ul#nav ul li a:hover, ul#nav ul li a:focus {
    .TypeL {padding-right:18px}
     label {position:relative}
    label:after {
-        content:'<>';
         font:11px "Consolas", monospace;
         color:#aaa;
         -webkit-transform:rotate(90deg);
