--- a/ITZRealStateWeb/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/ITZRealStateWeb/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -5,14 +5,12 @@
     using (Html.BeginForm("ExternalLogin", "Account", new { ReturnUrl = ViewBag.ReturnUrl }))
     {
     @Html.AntiForgeryToken()
-    <fieldset id="socialLoginList">
         <legend>Log with</legend>
         <p>
             @foreach (AuthenticationClientData p in Model)
             {
-                <button type="submit" name="provider" value="@p.AuthenticationClient.ProviderName" title="Inicie sesión con su cuenta de @p.DisplayName">@p.DisplayName</button>
+                <button type="submit" class="btn" name="provider" value="@p.AuthenticationClient.ProviderName" title="Inicie sesión con su cuenta de @p.DisplayName">@p.DisplayName</button>
             }
         </p>
-    </fieldset>
     }
 }
