--- a/ITZRealStateWeb/Content/logs.css
+++ b/ITZRealStateWeb/Content/logs.css
@@ -13,7 +13,7 @@ padding: 0 10 100 0px;
 
 #login-box {
 	width:300px;
-	height: auto;
+	height: 400px;
 	padding: 10px 76px 0 76px;
 	color: #E2E03E;
 	font: 16px kalinga, Helvetica, sans-serif;
