--- a/ITZRealStateWeb/Views/Desire/Index.cshtml
+++ b/ITZRealStateWeb/Views/Desire/Index.cshtml
@@ -1,13 +1,7 @@
 ﻿@model IEnumerable<ITZRealStateWeb.Models.Listing>
-
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
 <table>
     <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.IdListing)
-        </th>
+        
         <th>
             @Html.DisplayNameFor(model => model.street)
         </th>
@@ -18,31 +12,16 @@
             @Html.DisplayNameFor(model => model.colony)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.lotSize)
-        </th>
-        <th>
             @Html.DisplayNameFor(model => model.constSize)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.price)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.IdUser)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.sold)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.zipcode)
         </th>
         <th></th>
     </tr>
 
 @foreach (var item in Model) {
     <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.IdListing)
-        </td>
         <td>
             @Html.DisplayFor(modelItem => item.street)
         </td>
@@ -53,27 +32,15 @@
             @Html.DisplayFor(modelItem => item.colony)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.lotSize)
-        </td>
-        <td>
             @Html.DisplayFor(modelItem => item.constSize)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.price)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.IdUser)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.sold)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.zipcode)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+            @Html.ActionLink("Show on Map", "Edit", new { /* id=item.PrimaryKey */ }) |
+            @Html.ActionLink("Remove", "DeleteDesireAjax", new { id = item.IdListing , idu = ViewBag.id}) |
+            @Html.ActionLink("Share", "Delete", new { item.IdListing })
         </td>
     </tr>
 }
