--- a/ITZRealStateWeb/Views/Listing/Edit.cshtml
+++ b/ITZRealStateWeb/Views/Listing/Edit.cshtml
@@ -1,33 +1,23 @@
 ﻿@model ITZRealStateWeb.Models.Listing
 
-<script src="~/Scripts/jquery-1.7.1.min.js"></script>
+<script src="~/Scripts/jquery-1.8.2.min.js"></script>
 <script src="~/Scripts/jquery.validate.min.js"></script>
 <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
 
- <link rel="stylesheet" type="text/css" href="~/Content/logs.css" />
-
-@using (Html.BeginForm("CreateListingAjax", "Listing", FormMethod.Post, new { @class = "metro-form", id = "current_form" }))
-{
+@using (Html.BeginForm()) {
+    @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
 
-   @* <fieldset>*@
+    <fieldset>
+        <legend>Listing</legend>
 
-        <div id="login-box"  class="">
-       <div class="form_settings" id=" centro">
-
-        <legend><h2> Listing</h2></legend>
-
-
-            <div class="editor-label">
-           
+        <div class="editor-label">
             @Html.LabelFor(model => model.IdListing)
         </div>
-
         <div class="editor-field">
             @Html.EditorFor(model => model.IdListing)
             @Html.ValidationMessageFor(model => model.IdListing)
         </div>
-         
 
         <div class="editor-label">
             @Html.LabelFor(model => model.street)
@@ -37,7 +27,6 @@
             @Html.ValidationMessageFor(model => model.street)
         </div>
 
-
         <div class="editor-label">
             @Html.LabelFor(model => model.number)
         </div>
@@ -45,7 +34,6 @@
             @Html.EditorFor(model => model.number)
             @Html.ValidationMessageFor(model => model.number)
         </div>
-
 
         <div class="editor-label">
             @Html.LabelFor(model => model.colony)
@@ -79,18 +67,20 @@
             @Html.ValidationMessageFor(model => model.price)
         </div>
 
-  
-              
         <div class="editor-label">
             @Html.LabelFor(model => model.IdUser)
         </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.IdUser)
+            @Html.ValidationMessageFor(model => model.IdUser)
+        </div>
+
         <div class="editor-label">
             @Html.LabelFor(model => model.sold)
-               @Html.EditorFor(model => model.sold)
-            @Html.ValidationMessageFor(model => model.sold)
         </div>
         <div class="editor-field">
-         
+            @Html.EditorFor(model => model.sold)
+            @Html.ValidationMessageFor(model => model.sold)
         </div>
 
         <div class="editor-label">
@@ -101,17 +91,12 @@
             @Html.ValidationMessageFor(model => model.zipcode)
         </div>
 
-        @*@Html.HiddenFor(model => model.IdListing)
-		@Html.HiddenFor(model => model.IdUser)*@
-
         <p>
-            <input id="btnCreate" class="btn" type="submit" value="Create" onclick="createListing(this.form);" />
-            <input class="btn" type="submit" value="Cancel" onclick="cancelListing();" />
+            <input type="submit" value="Save" />
         </p>
-           
-        </div>
-        </div>
-    @Scripts.Render("~/Scripts/Shared/_Layout.js")
-      
-    @*</fieldset>*@
+    </fieldset>
 }
+
+<div>
+    @Html.ActionLink("Back to List", "Index")
+</div>
