--- a/ITZRealStateWeb/Views/Shared/_Layout.cshtml
+++ b/ITZRealStateWeb/Views/Shared/_Layout.cshtml
@@ -50,9 +50,12 @@
     <nav>
         <div id="menu_container" class="left">
             <ul class="sf-menu" id="nav">
+                <li><a href="#" onclick="">Search Listing</a></li>
                 <li><a href="#" onclick="Listings();">Listings</a></li>
-                <li><a href="#" onclick="Agents();">Sale Agents</a></li>
                 <li><a href="#" onclick="DesireList(@(ViewBag.id));">Favorites</a></li>
+                <li><a href="#" onclick="Agents();">Sale Agents</a></li>
+                <li><a href="#" onclick="">Settings</a></li> 
+                
             </ul>
         </div>
     </nav>
